--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         .demo-creds { background: #f0f0f0; padding: 15px; border-radius: 5px; margin-top: 20px; font-size: 13px; }
         
         /* Dashboard */
+        .login-container.active { display: flex; }
+        .login-container.hide { display: none !important; }
         .dashboard { display: none; }
         .dashboard.active { display: block; }
         .header { background: white; padding: 20px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
@@ -346,6 +348,7 @@
                     sessionId = data.session_id;
                     document.getElementById('currentUser').textContent = data.username;
                     document.getElementById('loginPage').classList.remove('active');
+                    document.getElementById('loginPage').classList.add('hide');
                     document.getElementById('dashboardPage').classList.add('active');
                     loadAllData();
                 } else {
@@ -362,6 +365,7 @@
             }).finally(() => {
                 sessionId = null;
                 document.getElementById('loginPage').classList.add('active');
+                document.getElementById('loginPage').classList.remove('hide');
                 document.getElementById('dashboardPage').classList.remove('active');
             });
         }
